ResponsivenessTimer mistakenly restarts immediately https://bugs.webkit.org/show_bug.cgi?id=204659

Reviewed by Chris Dumez.

* UIProcess/ResponsivenessTimer.cpp:
(WebKit::ResponsivenessTimer::timerFired):
Give startOneShot() a positive number timeout.


Canonical link: https://commits.webkit.org/217957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252984 268f45cc-cd09-0410-ab3c-d52691b4dbfc